32.8.0 (16-03-2021)
- Improvement: Add slot to indicate if lesson is extraordinary
- Improvement: Add selfAccountCreated to Person
- Bug fix: Disable competence course code edition
- Bug fix: When setting a country as default, unset the previous one
- Bug fix: Fixed photograph deletion by removing relation with photo approver

32.7.5 (23-02-2021)
- Improvement: remove registration state domain harcoded restriction (to allow in the future transform enum to entity)

32.7.4 (22-02-2021)
- Improvement: Improved permission service to use object-profiles cache

32.7.3 (15-02-2021)
- Bug fix: Fixed bug in access control validation

32.7.2 (12-02-2021)
- Improvement: Improved performance checking access with PermissionService

32.7.1 (08-02-2021)
- Bug fix: Fixed performance issue validation object access with PermissionService

32.7.0 (07-02-2021)
- Refactor: Cleanup deprecated Qualification slots, EducationArea and Formation 

32.6.3 (21-01-2021)
- Bug Fix: Replaced reference to deprecated method in lessons management 

32.6.2 (18-01-2021)
- Bug Fix: Avoid NPE when returning allowd child party types of unit without type

32.6.1 (11-01-2021)
- Bug Fix: Error accessing concluded students list in coordinator portal  

32.6.0 (06-01-2021)
- Improvement: Make coordinator sender from name more consistent with execution course sender
- Improvement: Improvement academic permission service

32.5.0 (05-01-2021)
- Refactor: Refactored sub classes of Occupation 

32.4.0 (10-12-2020)
- Refactor: Add interfaces and methods to get treasury customer and debt account

32.3.2 (23-11-2020)
- Bug Fix: Set CurrentPartyContact to null when deleting party contact #UL-FM-1968

32.3.1 (23-11-2020)
- Bug fix: Error accessing coordinator portal due to removal of bolonha type in degree type

32.3.0 (19-11-2020)
- Improvement: Support multiple sub-units with same name under same parent
- Bug fix: Fix broken back navigation from professorship creation